<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddEditTodoFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edit_text"
        android:layout_marginEnd="@dimen/margin_edit_text"
        android:layout_marginStart="@dimen/margin_edit_text"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_title"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_title"
        app:endIconMode="clear_text" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_title"
            android:maxLength="25"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edit_text"
        android:layout_marginEnd="@dimen/margin_edit_text"
        android:layout_marginStart="@dimen/margin_edit_text"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_description"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_description"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_desc"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_done"
        android:layout_margin="@dimen/margin_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_done" />

</LinearLayout>